--- a/component/loginModel/index.wxss
+++ b/component/loginModel/index.wxss
@@ -5,7 +5,7 @@
     color: #22cc22;
 }
 image{width:100%;height:100%}
-.btn{position: absolute;bottom:40rpx;right:40rpx;width: 610rpx;height: 88rpx;background: rgba(45, 135, 156, 1);color:#ffffff;font-size: 28rpx;line-height: 88rpx;border-radius: 24rpx;justify-content: center;}
+.btn{position: absolute;bottom:40rpx;right:40rpx;width: 610rpx;height: 88rpx;background: #ff6146;color:#ffffff;font-size: 28rpx;line-height: 88rpx;border-radius: 24rpx;justify-content: center;}
 .btn image{width: 48rpx;height: 40rpx;margin-right: 10rpx;}
 .btn1{position: absolute;bottom:60rpx;left:60rpx;width: 200rpx;height: 80rpx;background: rgba(216, 216, 216, 1);color: #fff;font-size: 24rpx;line-height: 80rpx;border-radius: 54rpx;text-align: center;}
 /* input{box-sizing: border-box;background: rgba(245, 245, 245, 1);width: 630rpx;margin: 0 auto;margin-bottom:30rpx;height: 80rpx;border-radius: 16rpx;padding-left: 40rpx;font-size: 24rpx;line-height: 24rpx;} */
