--- a/app.wxss
+++ b/app.wxss
@@ -50,8 +50,8 @@ button::after {border:0}
 .hoderColor{color: rgba(153, 153, 153, 1);}
 .fix-bottom{z-index:20;position: fixed;bottom: 0;left:0;width: 100%;height: 120rpx;background: #fff;padding: 0 30rpx;font-size: 28rpx;line-height: 120rpx;color: #333;box-shadow: 0 0 12rpx 0 rgba(0, 0, 0, 0.1)}
 .fix-bottom-1{background: transparent;bottom: 80rpx;box-shadow: 0 0 0 0}
-.fix-bottom .btn{width: 220rpx;height: 88rpx;background: #2D879C;color: #ffffff;text-align: center;line-height: 88rpx;font-size: 28rpx;border-radius: 24rpx;margin: 0;}
-.fix-bottom .btn1{width: 220rpx;height: 88rpx;color: #2D879C;background:#fff;text-align: center;line-height: 88rpx;font-size: 28rpx;border-radius: 24rpx;margin: 0;border:2rpx solid #2D879C}
+.fix-bottom .btn{width: 220rpx;height: 88rpx;background: #ff6146;color: #ffffff;text-align: center;line-height: 88rpx;font-size: 28rpx;border-radius: 24rpx;margin: 0;}
+.fix-bottom .btn1{width: 220rpx;height: 88rpx;color: #ff6146;background:#fff;text-align: center;line-height: 88rpx;font-size: 28rpx;border-radius: 24rpx;margin: 0;border:2rpx solid #ff6146}
 .fix-bottom text{font-size: 32rpx;line-height: 120rpx;color: #333333;}
 .loadingStyle{
   width: 100vw;
