--- a/component/getuserInfo/index.wxss
+++ b/component/getuserInfo/index.wxss
@@ -5,7 +5,7 @@
     color: #22cc22;
 }
 image{width:100%;height:100%}
-.btn{position: absolute;bottom:60rpx;left:430rpx;width: 260rpx;height: 80rpx;background: #2D879C;color: #2D879C!important;font-size: 24rpx;line-height: 80rpx;border-radius: 54rpx;text-align: center;}
+.btn{position: absolute;bottom:60rpx;left:430rpx;width: 260rpx;height: 80rpx;background: #ff6146;color: #ff6146!important;font-size: 24rpx;line-height: 80rpx;border-radius: 54rpx;text-align: center;}
 .btn1{position: absolute;bottom:60rpx;left:60rpx;width: 260rpx;height: 80rpx;background: rgba(216, 216, 216, 1);color: #fff;font-size: 24rpx;line-height: 80rpx;border-radius: 54rpx;text-align: center;}
 input{box-sizing: border-box;background: rgba(245, 245, 245, 1);width: 630rpx;margin: 0 auto;margin-bottom:30rpx;height: 80rpx;border-radius: 16rpx;padding-left: 40rpx;font-size: 24rpx;line-height: 24rpx;}
 textarea{height: 160rpx;padding-top: 28rpx}
