--- a/pages/homeIndex/homeIndex.wxml
+++ b/pages/homeIndex/homeIndex.wxml
@@ -1,13 +1,19 @@
 <view class="page">
     <view class="functionBox">
         <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" class="order" style="line-height:0">
-            <image src="../../images/tab/order.png"></image>
+            <image src="../../images/tab/order_shop.png"></image>
         </button>
         <view wx:else bindtap="getUserProfile" class="order" bindtap="toOrder">
-            <image src="../../images/tab/order.png"></image>
+            <image src="../../images/tab/order_shop.png"></image>
+        </view>
+        <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" class="order" style="line-height:0">
+            <image src="../../images/tab/shop.png"></image>
+        </button>
+        <view wx:else bindtap="getUserProfile" class="order" bindtap="toShopOrder">
+            <image src="../../images/tab/shop.png"></image>
         </view>
         <button open-type="contact" class="order" style="line-height:0">
-            <image src="../../images/tab/kf.png"></image>
+            <image src="../../images/tab/kf_shop.png"></image>
         </button>
     </view>
     <view class="swiper">
@@ -37,8 +43,8 @@
                         <view class="limit-ellipsis" style="max-width:230rpx;">{{vipData.nickName}}</view> 
                         <text style="font-size:24rpx;color:#eab234">{{vipData.memberGrade==1000 ? '' : vipData.gradeName}}</text>
                     </view>
-                    <view wx:if="{{vipData.memberGrade==1000}}" style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">开通会员,享更多权益~</view>
-                    <view wx:else style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx"><span wx:if="{{vipData.cycleTerm!='0'}}">{{vipData.limitTime}}到期</span><span wx:else>永久有效</span></view>
+                    <view wx:if="{{vipData.memberGrade==1000}}" style="margin-top:10rpx;color:#ff6146;font-size:24rpx">开通会员,享更多权益~</view>
+                    <view wx:else style="margin-top:10rpx;color:#ff6146;font-size:24rpx"><span wx:if="{{vipData.cycleTerm!='0'}}">{{vipData.limitTime}}到期</span><span wx:else>永久有效</span></view>
                 </view>
         </view>
         <button class="couponBtn" wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" style="font-size:28rpx;margin:0">去登录</button>
@@ -64,7 +70,7 @@
             </view>
             <view class="tabs" wx:if="{{activeTab!='2'}}">
                 <view class="left">
-                    <van-dropdown-menu active-color="#2d879c" class="{{typeId && value2?'all':(typeId && !value2?'one':(!typeId && value2?'two':''))}}">
+                    <van-dropdown-menu active-color="#ff6146" class="{{typeId && value2?'all':(typeId && !value2?'one':(!typeId && value2?'two':''))}}">
                         <van-dropdown-item value="{{ typeId }}" options="{{ typeList }}" bindchange="getTypeId"/>
                         <van-dropdown-item value="{{ value2 }}" options="{{ option2 }}"  bindchange="getFeeType"/>
                     </van-dropdown-menu>
