--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,6 +1,6 @@
 /* pages/my/my.wxss */
 page{background: #F9F9F9;}
-.background-url{width: 100%;height: 400rpx;position: relative;margin-bottom: 100rpx;background: #2D879C;}
+.background-url{width: 100%;height: 400rpx;position: relative;margin-bottom: 100rpx;background: #ff6146;}
 .bg-img{position: absolute;top: 0;left: 0;z-index: -1;}
 image{width: 100%;height: 100%}
 .info{width:100%;padding: 20rpx 60rpx;padding-bottom: 10rpx;position: absolute;top: 25%;left: 0;transform: translate(-50% -50%);}
@@ -11,7 +11,7 @@ image{width: 100%;height: 100%}
   background-color: #ffffff;
   border-radius: 36rpx;
   font-size: 28rpx;
-  color: rgba(45, 135, 156, 1);
+  color: #ff6146;
   padding: 0 20rpx;
   text-align: center;
 }
@@ -21,7 +21,7 @@ image{width: 100%;height: 100%}
 .operation{margin-bottom: 40rpx;padding: 0 60rpx;margin-top: 0rpx}
 .operation .btn1{width: 230rpx;height: 56rpx;color: #FAE8B7;font-size: 24rpx;line-height: 56rpx;border-radius: 28rpx;text-align: center;border: 2rpx solid #FAE8B7;margin-right: 20rpx}
 .coupon,.integral{text-align: center}
-.coupon text,.integral text{font-size: 48rpx;font-weight: bold;color:#2D879C}
+.coupon text,.integral text{font-size: 48rpx;font-weight: bold;color:#ff6146}
 .coupon view,.integral view{font-size: 24rpx;color:#fff}
 swiper{height: 200rpx;margin-bottom: 40rpx}
 .ray{width: 630rpx;height:260rpx;margin: 0 auto}
@@ -33,11 +33,11 @@ swiper{height: 200rpx;margin-bottom: 40rpx}
 .downLoad .box{border: 2rpx solid rgba(234, 234, 234, 1);width: 290rpx;height: 100rpx;border-radius: 12rpx;padding: 20rpx;position: relative}
 .downLoad .box .img{width: 60rpx;height: 60rpx;margin-right: 10rpx}
 .downLoad .box .word{font-size: 20rpx;line-height: 1.4;color: #333;width: 80rpx;margin-right: 20rpx}
-.downLoad .box .btn{width: 78rpx;height: 44rpx;background: rgba(235, 242, 253, 1);color: #2D879C;border:2rpx solid #2D879C;font-size: 20rpx;line-height: 44rpx;border-radius: 12rpx;text-align: center;position: absolute;right:20rpx;top:50%;transform: translateY(-50%);}
+.downLoad .box .btn{width: 78rpx;height: 44rpx;background: rgba(235, 242, 253, 1);color: #ff6146;border:2rpx solid #ff6146;font-size: 20rpx;line-height: 44rpx;border-radius: 12rpx;text-align: center;position: absolute;right:20rpx;top:50%;transform: translateY(-50%);}
 .bottomBox{background: #ffffff;border-radius: 24rpx;transform: translateY(-170rpx);width: 690rpx;margin-left: 30rpx;padding: 30rpx;margin-bottom: 30rpx;position: relative;overflow: hidden;}
 .bottomBox.active{border: 2rpx solid #f8c00a;}
 .bottomBox .title{font-size: 32rpx;font-weight: bold;color: #333333;}
 .bottomBox .date{font-size: 28rpx;color: #999999;}
 .bottomBox .tip{font-size: 24rpx;color: #999999;line-height: 1.5;}
-.bottomBox .price{font-size: 36rpx;color: #2D879C;font-weight: bold;position: absolute;bottom: 30rpx;right: 30rpx;}
+.bottomBox .price{font-size: 36rpx;color: #ff6146;font-weight: bold;position: absolute;bottom: 30rpx;right: 30rpx;}
 .vipInfo{width: 100%;font-size: 24rpx;color: #999999;line-height: 1.5;background: #ffffff;width: 80%;}
