--- a/pages/vidioInfo/vidioInfo.wxss
+++ b/pages/vidioInfo/vidioInfo.wxss
@@ -19,7 +19,7 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
 .content .selectBox .type{height: 88rpx;padding: 0 30rpx;}
 .content .selectBox image{width: 40rpx;height: 40rpx;}
 .content .noteBox{width: 690rpx;border-radius: 24rpx;background-color: #ffffff;padding: 30rpx;margin-top: 30rpx;transform: translateY(-80rpx);}
-.content .noteBox .title{font-size: 28rpx;font-weight: bold;color: #2D879C;margin-bottom: 20rpx;text-align: center;width: 100%;display: inline-block}
+.content .noteBox .title{font-size: 28rpx;font-weight: bold;color: #ff6146;margin-bottom: 20rpx;text-align: center;width: 100%;display: inline-block}
 .content .noteBox .page{font-size: 22rpx;color: #999999;line-height: 40rpx;}
 .infoBox .user{height:40rpx;border:2rpx solid #C3E0E7;font-size: 20rpx;color:#A4CCD7;line-height: 40rpx;padding: 10rpx;border-radius: 20rpx;}
 .infoBox .user image{width: 24rpx;height: 20rpx;margin-right: 2rpx;}
@@ -45,8 +45,8 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
 .cart image{width: 60rpx;height: 60rpx;margin-bottom: 20rpx;}
 .cart .num{width: 28rpx;height: 28rpx;background: #CF2525;color: #fff;text-align: center;line-height: 28rpx;font-size: 20rpx;position: absolute;top: -4rpx;right: -8rpx;border-radius: 50%;}
 .cart .tip{position: absolute;bottom: 10rpx;color: #333333;font-size: 20rpx;}
-.btn-l{padding-left:10rpx;height: 88rpx;color: #2D879C;text-align: center;line-height: 88rpx;font-size: 28rpx;border-radius: 24rpx;}
-.btn-r{padding-right:10rpx;width: 220rpx;height: 88rpx;background: #2D879C;color: #C3E0E7;text-align: center;line-height: 88rpx;font-size: 28rpx;border-top-right-radius: 24rpx;border-bottom-right-radius: 24rpx;}
+.btn-l{padding-left:10rpx;height: 88rpx;color: #ff6146;text-align: center;line-height: 88rpx;font-size: 28rpx;border-radius: 24rpx;}
+.btn-r{padding-right:10rpx;width: 220rpx;height: 88rpx;background: #ff6146;color: #C3E0E7;text-align: center;line-height: 88rpx;font-size: 28rpx;border-top-right-radius: 24rpx;border-bottom-right-radius: 24rpx;}
 .toTop{width: 80rpx;height: 80rpx;position: fixed;bottom: 260rpx;right: 24rpx;}
 .toTop .img{width: 100%;height: 100%;}
 /* 传语音 */
@@ -80,7 +80,7 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
 }
 .audio_text{
   font-weight: bold;
-  color:#90BED5;
+  color:#ff6146;
   font-size: 28rpx;
   width: 180rpx;
   text-align:center;
@@ -111,7 +111,7 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
   height: 86rpx;
   line-height: 86rpx;
   font-size: 32rpx;
-  color: #2D879C;
+  color: #ff6146;
   padding: 0 20rpx;
   text-align: center;
   border-top: 1px solid #e0dede;
@@ -122,7 +122,7 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
   height: 86rpx;
   line-height: 86rpx;
   font-size: 32rpx;
-  color: rgba(45, 135, 156, 1);
+  color: #ff6146;
   padding: 0 20rpx;
   text-align: center;
   border-top: 1px solid #e0dede;
