--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -41,12 +41,12 @@
                 <view wx:for="{{goodsList}}" wx:key="index" class="article content">
                     <button class="mask" wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile"></button>
                     <view class="bottom flex-center-Y" bindtap="toDetail" data-path="{{item.path}}">
-                        <image src="{{item.head_img[0]}}" />
+                        <image class="picImg" src="{{item.head_img[0]}}" />
                         <view>
                             <view class="title">{{item.title}}</view>
-                            <view class="detail flex-center-Y justify-between"><view class="limit-ellipsis" style="width:350rpx">{{item.sub_title}}</view></view>
+                            <view class="detail flex-center-Y justify-between"><view class="limit-ellipsis" style="width:380rpx">{{item.sub_title}}</view></view>
                         </view>
-                        <view class="detail" style="position:absolute;right:20rpx;top:50%;transform:translateY(-50%);text-align:right;margin-right:0;margin-top:0">￥
+                        <view class="detail" style="position:absolute;right:0rpx;top:50%;transform:translateY(-50%);text-align:right;margin-right:0;margin-top:0">￥
                             <text class="price">{{item.min_price/100}}</text>
                             <!-- <view class="sale">50.00</view> -->
                         </view>
