--- a/pages/shop/shop.wxss
+++ b/pages/shop/shop.wxss
@@ -259,17 +259,13 @@ swiper,
 }
 
 .article .bottom .title {
-  font-size: 28rpx;
-  margin-bottom: 10rpx
-}
-
-.article .bottom .title {
-  line-height: 1;
+  margin-top: -20rpx;
+  width: 400rpx;
+  line-height: 2;
   font-size: 28rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   color: #333333;
-  /* line-height: 2; */
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
@@ -281,7 +277,7 @@ swiper,
   margin-right: 10rpx;
   margin-top: 20rpx;
   line-height: 1;
-  width:500rpx
+  width:400rpx
 }
 
 .article .bottom .date {
@@ -351,7 +347,7 @@ swiper,
   margin-right: 2rpx;
 }
 
-.article .bottom image {
+.article .bottom .picImg {
   width: 100rpx;
   height: 100rpx;
   margin-right: 20rpx;
